--- a/index.html
+++ b/index.html
@@ -1,20 +1,16 @@
-<head>
-    <!-- This will show up on the tab in your browser -->
-    <title>Alex Calculator</title>
-
-    <!-- This links your css file to the html -->
-    <link rel="stylesheet" type="text/css" href="index.css">
-</head>
-
+<!DOCTYPE html>
+<html>
 <body>
-    <!-- This is the start of the "About" section -->
-    <div class="about">
-        <h1>About</h1>
-        <p>How Old Are you In Alex's ?</p>
-    </div>
 
-    <!-- This is the start of the projects section -->
-    <div class="projects">
-        <h1>Enter Your Age In Sun Rotations Below:</h1>
-    </div>
+<h1>The input element</h1>
+
+<form action="/action_page.php">
+  <label for="sunRotations">Human Years:</label>
+  <input type="text" id="sunRotations" name="sunRotations"><br><br>
+  <input type="calculate" value="Calculate">
+</form>
+
+<p>Click the "Calculate" button to know your age in Alex's "action_page.php".</p>
+
 </body>
+</html>
