--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1>The input element</h1>
+<h1>How Many Alex's Are You?</h1>
 
 <form action="/action_page.php">
   <label for="sunRotations">Human Years:</label>
