--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <input type="calculate" value="Calculate">
 </form>
 
-<p>Click the "Calculate" button to know your age in Alex's "action_page.php".</p>
+<p>Click the "Calculate" button to know your age in Alex's.</p>
 
 </body>
 </html>
