--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html> 
+<head>
+<meta charset=utf-8 />
+<title>JavaScript program to calculate multiplication and division of two numbers </title>
+<style type="text/css">
+body {margin: 30px;}
+</style> 
+</head>
 <body>
-
-<h1>How Many Alex's Are You?</h1>
-
-<form action="/action_page.php">
-  <label for="sunRotations">Human Years:</label>
-  <input type="text" id="sunRotations" name="sunRotations"><br><br>
-  <input type="calculate" value="Calculate">
+<form>
+1st Number : <input type="text" id="firstNumber" /><br>
+2nd Number: <input type="text" id="secondNumber" /><br>
+<input type="button" onClick="multiplyBy()" Value="Multiply" />
+<input type="button" onClick="divideBy()" Value="Divide" />
 </form>
-
-<p>Click the "Calculate" button to know your age in Alex's.</p>
-
+<p>The Result is : <br>
+<span id = "result"></span>
+</p>
 </body>
 </html>
